syntax = "proto3";

enum CmdID {
    LOGIN = 0;
}